--- a/demo1.html
+++ b/demo1.html
@@ -29,24 +29,25 @@ a:hover, a:active, a:focus { text-decoration:none; }
 </style>
 </head>
 <body>
+    <h1 style="height: 50px; line-height: 50px;">demo1 : 最简调用</h1>
     <div class="slider" id="slider">
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/1m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252510_956233.jpg" alt="" title="" />
         </div>
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/2m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252511_492481.jpg" alt="" title="" />
         </div>
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/3m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252512_283931.jpg" alt="" title="" />
         </div>
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/4m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252514_357160.jpg" alt="" title="" />
         </div>
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/5m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252524_501570.jpg" alt="" title="" />
         </div>
         <div class="slider_item">
-            <img src="http://galleria.io/static/i/s2013/6m.jpg" alt="" title="" />
+            <img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252523_365798.jpg" alt="" title="" />
         </div>
     </div>
 <script src="src/slider.js"></script>
