--- a/demo2.html
+++ b/demo2.html
@@ -36,24 +36,25 @@ a:hover, a:active, a:focus { text-decoration:none; }
 </style>
 </head>
 <body>
+    <h1 style="height: 50px; line-height: 50px;">demo2 : 常用轮播图实现</h1>
     <div class="slider" id="slider">
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/1m.jpg" alt="" title="" /><span class="item_text">2013年最性感超模Top25火辣出炉2013年最性感超模Top25火辣出炉0</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252510_956233.jpg" alt="" title="" /><span class="item_text">2013年最性感超模Top25火辣出炉2013年最性感超模Top25火辣出炉0</span></a>
         </div>
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/2m.jpg" alt="" title="" /><span class="item_text">2013年最性感超模Top25火辣出炉2013年最性感超模Top25火辣出炉1</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252511_492481.jpg" alt="" title="" /><span class="item_text">2013年最性感超模Top25火辣出炉2013年最性感超模Top25火辣出炉1</span></a>
         </div>
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/3m.jpg" alt="" title="" /><span class="item_text">图片描述2</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252512_283931.jpg" alt="" title="" /><span class="item_text">图片描述2</span></a>
         </div>
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/4m.jpg" alt="" title="" /><span class="item_text">图片描述3</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252514_357160.jpg" alt="" title="" /><span class="item_text">图片描述3</span></a>
         </div>
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/5m.jpg" alt="" title="" /><span class="item_text">图片描述4</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252524_501570.jpg" alt="" title="" /><span class="item_text">图片描述4</span></a>
         </div>
         <div class="slider_item">
-            <a href="" target="_blank"><img src="http://galleria.io/static/i/s2013/6m.jpg" alt="" title="" /><span class="item_text">图片描述5</span></a>
+            <a href="" target="_blank"><img src="http://www.sinaimg.cn/dy/slidenews/5_img/2015_33/30939_1252523_365798.jpg" alt="" title="" /><span class="item_text">图片描述5</span></a>
         </div>
     </div>
     <div>
